[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = false
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
rand = "0.8"
fake = { version = "2.9", features = ["chrono", "uuid"] }
